--- a/DreamVehicle.Services/DreamVehicle.Services.csproj
+++ b/DreamVehicle.Services/DreamVehicle.Services.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="6.2.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\DreamVehicle.Data\DreamVehicle.Data.csproj" />
   </ItemGroup>
 
