--- a/DreamVehicle.Web/DreamVehicle.Web.csproj
+++ b/DreamVehicle.Web/DreamVehicle.Web.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="AutoMapper" Version="6.2.2" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -15,6 +17,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DreamVehicle.Data\DreamVehicle.Data.csproj" />
     <ProjectReference Include="..\DreamVehicle.Models\DreamVehicle.Models.csproj" />
+    <ProjectReference Include="..\DreamVehicle.Services\DreamVehicle.Services.csproj" />
   </ItemGroup>
 
 </Project>
